[gd_scene load_steps=21 format=3 uid="uid://dtbhn6frgc04f"]

[ext_resource type="Script" uid="uid://b5w8ru23xlqhn" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://1dviuas5efmr" path="res://assets/sprites/stickman.png" id="2_g2els"]
[ext_resource type="AudioStream" uid="uid://e1h0ivuik5br" path="res://assets/sounds/jump.wav" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://2noyvhs43i58" path="res://assets/sounds/explosion.wav" id="4_dqkch"]
[ext_resource type="AudioStream" uid="uid://bggilrk3y18tb" path="res://assets/sounds/body_hit_finisher.wav" id="5_qlg0r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_g2els")
region = Rect2(0, 254, 64, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_g2els")
region = Rect2(64, 254, 64, 127)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_f1ej7"]
load_path = "res://.godot/imported/stickman.png-23a8aa6168a1f058c9167276eb683a1b.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = SubResource("CompressedTexture2D_f1ej7")
region = Rect2(0, 0, 64, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = SubResource("CompressedTexture2D_f1ej7")
region = Rect2(64, 0, 64, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = SubResource("CompressedTexture2D_f1ej7")
region = Rect2(128, 0, 64, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = SubResource("CompressedTexture2D_f1ej7")
region = Rect2(192, 0, 64, 127)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qhqgy"]
load_path = "res://.godot/imported/stickman.png-23a8aa6168a1f058c9167276eb683a1b.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = SubResource("CompressedTexture2D_qhqgy")
region = Rect2(256, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = SubResource("CompressedTexture2D_f1ej7")
region = Rect2(0, 127, 64, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = SubResource("CompressedTexture2D_f1ej7")
region = Rect2(64, 127, 64, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = SubResource("CompressedTexture2D_f1ej7")
region = Rect2(128, 127, 64, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = SubResource("CompressedTexture2D_f1ej7")
region = Rect2(192, 127, 64, 127)

[sub_resource type="SpriteFrames" id="SpriteFrames_2hs0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": false,
"name": &"hit",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]
size = Vector2(24, 46)

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.38419e-07, -45)
scale = Vector2(0.86328, 0.86328)
sprite_frames = SubResource("SpriteFrames_2hs0m")
animation = &"hit"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -23)
shape = SubResource("RectangleShape2D_qhqgy")

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qhqgy")
volume_db = -5.0
bus = &"SFX"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dqkch")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qlg0r")
volume_db = 9.936

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
